implementacion base de datos

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/feria-project
 excludes=
+file.reference.dotenv-java-3.0.0.jar=C:\\Users\\jcmro\\Downloads\\dotenv-java-3.0.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\jcmro\\Downloads\\mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.dotenv-java-3.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=feria-project
-main.class=main.java.principal.Main
+main.class=com.feria.principal.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
