crear modelos para gasto, reporte e ingreso

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=feria-project
-main.class=com.feria.principal.Main
+main.class=main.java.principal.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
