--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/feria-project
 excludes=
 file.reference.dotenv-java-3.0.0.jar=C:\\Users\\jcmro\\Downloads\\dotenv-java-3.0.0.jar
+file.reference.dotenv-java-3.0.0.jar-1=jars_needed\\dotenv-java-3.0.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\jcmro\\Downloads\\mysql-connector-java-8.0.30.jar
+file.reference.mysql-connector-java-8.0.30.jar-1=jars_needed\\mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.dotenv-java-3.0.0.jar}
+    ${file.reference.dotenv-java-3.0.0.jar}:\
+    ${file.reference.dotenv-java-3.0.0.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
