--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.dotenv-java-3.0.0.jar}:\
     ${file.reference.dotenv-java-3.0.0.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.30.jar-1}
+    ${file.reference.mysql-connector-java-8.0.30.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
