--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -80,7 +80,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=feria-project
-main.class=main.java.Main
+main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
