agregar funcionalidad al panel de registro de local

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=feria-project
+application.vendor=jcmro
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,19 +33,16 @@ dist.jar=${dist.dir}/feria-project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/feria-project
+endorsed.classpath=
 excludes=
-file.reference.dotenv-java-3.0.0.jar=C:\\Users\\jcmro\\Downloads\\dotenv-java-3.0.0.jar
-file.reference.dotenv-java-3.0.0.jar-1=jars_needed\\dotenv-java-3.0.0.jar
-file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\jcmro\\Downloads\\mysql-connector-java-8.0.30.jar
-file.reference.mysql-connector-java-8.0.30.jar-1=jars_needed\\mysql-connector-java-8.0.30.jar
+file.reference.jcalendar-1.4.jar=jars-you-may-need/jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.30.jar=jars-you-may-need/mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.dotenv-java-3.0.0.jar}:\
-    ${file.reference.dotenv-java-3.0.0.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.30.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
