--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,12 +37,14 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=jars-you-may-need/jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.30.jar=jars-you-may-need/mysql-connector-java-8.0.30.jar
+file.reference.xchart-3.8.4.jar=jars-you-may-need\\xchart-3.8.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.xchart-3.8.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
